--- a/index.html
+++ b/index.html
@@ -1,5 +1,15 @@
 <!DOCTYPE html>
 <html>
+<head>
+  <link rel="stylesheet" href="css/style.css">
+  <meta charset="utf-8">
+  <title>Memory</title>
+</head>
+<body>
+  <header>
+    <h1>Memory</h1>
+    <button class="reset" type="button">IGEN!</button>
+  </header>
   <script src="js/main.js"></script>
 </div>
   </body>
